# DPhish

./: README.md  cli.py  pyproject.toml
dphish/: __init__.py  __main__.py
